# LocalAI-personal-coach

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
docker/: docker-compose.yml  dockerfile
